[NEW] add GET device to API for external monitoring
